Bug fix: - 2899784: duplication of returned field in returned xml

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -14,6 +14,7 @@ Open Search Server 1.1.2
 
 Bug fixes
 - 2898343: Behaviour problem of wildcard function
+- 2899784: duplication of returned field in returned xml
 
 Open Search Server 1.1.1
 
