--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,7 +8,9 @@ http://sourceforge.net/tracker/?group_id=260863
 
 Open Search Server 1.2
 
-- 2888788: Upgrade Lucene to release 2.9.0
+- 2900462: Upgrade POI to 3.5 for xlsx and docs support
+- 2900449: Upgrade PDFBox to 0.8
+- 2888788: Upgrade Lucene to release 2.9.x
 
 Open Search Server 1.1.2
 
