--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,9 @@ http://sourceforge.net/tracker/?group_id=260863
 
 Open Search Server 1.1.2
 
+New features:
+- 2910029: Lucene read only support
+
 Bug fixes
 - 2908345: Performance issue with large field cache
 - 2905076: Issue with performance of web crawler
