--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -14,7 +14,12 @@ Open Search Server 1.2
 
 Open Search Server 1.1.2
 
+New features:
+- 2910029: Lucene read only support
+
 Bug fixes
+- 2908345: Performance issue with large field cache
+- 2905076: Issue with performance of web crawler
 - 2903935: Negative value on web crawler statistics
 - 2898343: Behaviour problem of wildcard function
 - 2899784: duplication of returned field in returned xml
