Bug fixed: 2934214 - Shifted highlighting on snippet

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,10 +8,14 @@ http://sourceforge.net/tracker/?group_id=260863
 
 Open Search Server 1.2
 
+New features:
 - 2929332: Faceting post collapsing
 - 2900462: Upgrade POI to 3.5 for xlsx and docs support
 - 2900449: Upgrade PDFBox to 0.8
 - 2888788: Upgrade Lucene to release 2.9.x
+
+Buf fixes:
+- 2934214: Shifted highlighting on snippet
 
 Open Search Server 1.1.2
 
