--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -9,6 +9,9 @@ http://sourceforge.net/tracker/?group_id=260863
 Open Search Server 1.2
 
 New features:
+- 2953577: Upgrade to Zkoss version 3.6.3
+- 2953575: Charset detection should look at meta http-equiv
+- 2953524: Specify default charset for parser
 - 2929332: Faceting post collapsing
 - 2900462: Upgrade POI to 3.5 for xlsx and docs support
 - 2900449: Upgrade PDFBox to 0.8
