- 2953803: Upgrade to PDFBox 1.0 - 2953802: Upgrade to POI 3.6

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -9,6 +9,8 @@ http://sourceforge.net/tracker/?group_id=260863
 Open Search Server 1.2
 
 New features:
+- 2953803: Upgrade to PDFBox 1.0	
+- 2953802: Upgrade to POI 3.6
 - 2953577: Upgrade to Zkoss version 3.6.3
 - 2953575: Charset detection should look at meta http-equiv
 - 2953524: Specify default charset for parser
