--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -32,6 +32,12 @@ Bug fixes:
 - 2982541: Phrase synonyms generate unwanted words
 - 2934214: Shifted highlighting on snippet
 
+Open Search Server 1.1.3
+
+Bug fixes
+- 2988425: Crawler is not obeying disallow directives from robots.txt
+- 2988433: Crawler ignores query part of URL when evaluating robots.txt
+
 Open Search Server 1.1.2
 
 New features:
