--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,6 +6,11 @@ CHANGE LOG
 All new features and bugs are described here:
 http://sourceforge.net/tracker/?group_id=260863
 
+Open Search Server 1.1.4
+
+New features:
+- 2995116: Replace Javamail library
+
 Open Search Server 1.1.3
 
 Bug fixes
