--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -9,6 +9,7 @@ http://sourceforge.net/tracker/?group_id=260863
 Open Search Server 1.2
 
 New features:
+- 2997826: Possibility to index only the specified content (partial implementation: <oss ignore="yes">)
 - 2991252: Possibility to index binary file and to add it to a document
 - 2982545: Extracting term frequency informations
 - 2881385: API to retrieve the available indice
@@ -39,6 +40,7 @@ Open Search Server 1.1.4
 
 New features:
 - 2995116: Replace Javamail library
+
 Open Search Server 1.1.3
 
 Bug fixes
