--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -39,6 +39,7 @@ New features:
 - 2900449: Upgrade PDFBox to 0.8
 
 Bug fixes:
+- 3019491: NullPointerException > at java.util.regex.Matcher
 - 3017481: The web crawler selects the host in alphabetical order
 - 3015838: Web crawler problem with UTF-8 BOM encoding
 - 2993103: NoClassDefFoundError BouncyCastleProvider
