--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -30,7 +30,7 @@ New features:
 - 2973374: Upgrade to ZKoss 5.0.x	
 - 2970747: Upgrade Tomcat to version 6.0.26
 - 2966139: Statistics lost when OSS restart
-- 2964704: Upgrade to Lucene 2.9.2
+- 2964704: Upgrade to Lucene 2.9.x
 - 2958015: Add source archive
 - 2958005: Upgrade Apache HttpClient library to 4.0.1	
 - 2956498: Provide a way to send statistics report by email
