--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,6 +6,14 @@ CHANGE LOG
 All new features and bugs are described here:
 http://sourceforge.net/tracker/?group_id=260863
 
+OpenSearchServer 1.2.2
+
+New features:
+- 3175074: screenshot of an webpage
+
+Bug fixes:
+- 3192429: Not the correct definition of the Russian language.
+
 OpenSearchServer 1.2.1
 
 New features:
