--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -9,7 +9,9 @@ http://sourceforge.net/tracker/?group_id=260863
 OpenSearchServer 1.2.2
 
 New features:
-- 3175074: screenshot of an webpage
+- 2973374: Upgrade to ZKoss 5.0.6
+- 3213190: Negative filtering
+- 3175074: Screenshot of a webpage
 - 3094822: SiteMap functionnality
 
 Bug fixes:
@@ -68,7 +70,7 @@ New features:
 - 2881385: API to retrieve the available indice
 - 2887376: Enhancement for the index page - dropping indexes
 - 2881388: API to list/create/modify fields in a specified schema
-- 2973374: Upgrade to ZKoss 5.0.x	
+- 2973374: Upgrade to ZKoss 5.0.5	
 - 2970747: Upgrade Tomcat to version 6.0.26
 - 2966139: Statistics lost when OSS restart
 - 2964704: Upgrade to Lucene 2.9.x
