New feature: 3266524: Return terms from non stored fields New feature: 3266520: Cache management in Web UI

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -9,6 +9,8 @@ http://sourceforge.net/tracker/?group_id=260863
 OpenSearchServer 1.2.2
 
 New features:
+- 3266524: Return terms from non stored fields	
+- 3266520: Cache management in Web UI
 - 3253614: Upgrade to PDFBox 1.5.x
 - 2973374: Upgrade to ZKoss 5.0.6
 - 3213190: Negative filtering
