Bug fix: 3278815 - The language is not detected in PDF files

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -18,7 +18,8 @@ New features:
 - 3094822: SiteMap functionnality
 
 Bug fixes:
-- 3192429: Not the correct definition of the Russian language.
+- 3278815: The language is not detected in PDF files
+- 3192429: Not the correct definition of the Russian language
 
 OpenSearchServer 1.2.1
 
