Fixed bug 3386593:  LimitException when reading Robots.txt

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -20,6 +20,7 @@ New features:
 - 2958005: Upgrade Apache HttpClient library to 4.1.1
 
 Bug fixes:
+- 3386593: LimitException when reading Robots.txt	
 - 3380949: NPE in Renderer
 - 3376106: The mapping of inlink and outlink is broken	
 - 3346206: NPE when Fragmenter is set through API.
