--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -9,6 +9,7 @@ http://sourceforge.net/tracker/?group_id=260863
 OpenSearchServer 1.2.3
 
 New features:
+- 3393751: XML load sheduler task
 - 3393063: Upgrade to SeleniumHQ 2.0.4
 - 3393052: Upgrade to NekoHTML 1.9.15
 - 3393047: Upgrade to TagSoup 1.2.1
