--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -9,6 +9,7 @@ http://sourceforge.net/tracker/?group_id=260863
 OpenSearchServer 1.2.3
 
 New features:
+- 3396935: Log files viewable in the user interface
 - 3393751: XML load sheduler task
 - 3393063: Upgrade to SeleniumHQ 2.0.4
 - 3393052: Upgrade to NekoHTML 1.9.15
@@ -27,6 +28,11 @@ New features:
 - 2958005: Upgrade Apache HttpClient library to 4.1.1
 
 Bug fixes:
+- 3409814: Error: The document is really a RTF file
+- 3408193: Password of the XMLLoad task is not encrypted
+- 3406657: File crawler error: unknown protocol: smb
+- 3406378: SQLite supports only TRANSACTION_SERIALIZABLE
+- 3396778: Word 95 or older format are not indexed	
 - 3386593: LimitException when reading Robots.txt	
 - 3380949: NPE in Renderer
 - 3376106: The mapping of inlink and outlink is broken	
