--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -17,6 +17,7 @@ New features:
 OpenSearchServer 1.2.3
 
 New features:
+- 3429967: Scheduler task: monitoring upload
 - 3419014: Delete by query task in scheduler
 - 3396935: Log files viewable in the user interface
 - 3393751: XML load sheduler task
@@ -37,6 +38,7 @@ New features:
 - 2958005: Upgrade Apache HttpClient library to 4.1.1
 
 Bug fixes:
+- 3429305: NullPointerException while index Word document
 - 3426912: Authorization error when loading binary with XML Load
 - 3419013: Scheduler job end date error
 - 3325102: Bug Report	Disabled Robots doesn't work
