--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -9,6 +9,7 @@ http://sourceforge.net/tracker/?group_id=260863
 OpenSearchServer 1.2.3
 
 New features:
+- 3429967: Scheduler task: monitoring upload
 - 3419014: Delete by query task in scheduler
 - 3396935: Log files viewable in the user interface
 - 3393751: XML load sheduler task
