New feature 3431741, Fault tolerant parser on XML upload

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -17,6 +17,7 @@ New features:
 OpenSearchServer 1.2.3
 
 New features:
+- 3431741: Fault tolerant parser on XML upload
 - 3429967: Scheduler task: monitoring upload
 - 3419014: Delete by query task in scheduler
 - 3396935: Log files viewable in the user interface
