--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -9,6 +9,9 @@ http://sourceforge.net/tracker/?group_id=260863
 OpenSearchServer 1.3
 
 New features:
+- 3466448: Multiple OpenSearchServer instances on one Tomcat server
+- 3466447: Adding NumDeletedDocs in Runtime/Index
+- 3466445: Upgrade Apache POI to 3.8	
 - 3422180: Upgrade to ZK 5.0.9
 - 3417863: Upgrade Tomcat to version 6.0.35
 - 3421240: JSON response for OpenSearchServer
