--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -9,6 +9,7 @@ http://sourceforge.net/tracker/?group_id=260863
 OpenSearchServer 1.3
 
 New features:
+- 3469777: Scored snippets
 - 3467459: Phonetic filters
 - 3467437: A filter to extract the domain information
 - 3466448: Multiple OpenSearchServer instances on one Tomcat server
