Bug fix 3471749: Out Of Memory Error while indexing PDF document

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,6 +6,11 @@ CHANGE LOG
 All new features and bugs are described here:
 http://sourceforge.net/tracker/?group_id=260863
 
+OpenSearchServer 1.2.4
+
+Bug fixes:
+- 3471749: Out Of Memory Error while indexing PDF document
+
 OpenSearchServer 1.2.3
 
 New features:
