--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -24,6 +24,7 @@ New features:
 OpenSearchServer 1.2.4
 
 Bug fixes:
+- 3472905: Error while crawling local HTML file
 - 3471749: Out Of Memory Error while indexing PDF document
 
 OpenSearchServer 1.2.3
