--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -10,7 +10,6 @@ OpenSearchServer 1.3
 
 New features:
 - 3471808: Consecutive duplicate characters filter
-- 3469777: Scored snippets
 - 3467459: Phonetic filters
 - 3467437: A filter to extract the domain information
 - 3466448: Multiple OpenSearchServer instances on one Tomcat server
@@ -22,6 +21,9 @@ New features:
 - 3386107: OpenSearch Standards
 
 OpenSearchServer 1.2.4
+
+New features:
+- 3469777: Scored snippets
 
 Bug fixes:
 - 3472905: Error while crawling local HTML file
