--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -26,6 +26,7 @@ New features:
 - 3469777: Scored snippets
 
 Bug fixes:
+- 3476551: Query with Quotation Marks has unusual results	
 - 3472905: Error while crawling local HTML file
 - 3471749: Out Of Memory Error while indexing PDF document
 
