--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -13,6 +13,7 @@ New features:
 - 3469777: Scored snippets
 
 Bug fixes:
+- 3482151: Monitor API response gives error
 - 3479649: SetField and DeleteField API don't update config.xml
 - 3479548: Report log files are truncated
 - 3476578: UTF-8 character as separator in snippet field
