--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -18,6 +18,7 @@ New features:
 - 3469777: Scored snippets
 
 Bug fixes:
+- 3489550: Schema API gives IllegalStateException
 - 3485241: Pages with meta noindex are indexed
 - 3483798: HTML parser prints many logs
 - 3483259: Underscore added when using synonyms on expression
