--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -9,6 +9,7 @@ http://sourceforge.net/tracker/?group_id=260863
 OpenSearchServer 1.2.4
 
 New features:
+- 3495004: Add progress info in scheduler task	
 - 3490031: Asynchronous XML upload
 - 3489935: Default stop words list
 - 3489934: A default autocomplete field and analyzer
