--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -26,6 +26,7 @@ New features:
 - 3469777: Scored snippets
 
 Bug fixes:
+- 3500288: Wrong facet count when using optimized collapsing
 - 3498607: NPE when collapsing is enable with no documents found
 - 3495681: StringIndexOutOfBoundsException on snippet
 - 3489854: A faster indexation when using XML upload
